# Mendel-markdown-editor

./: .gitignore  LICENSE  README.md  gen-icon.py  index.html  package-lock.json  package.json
src/: editor.ts  export.ts  fileops.ts  image-handler.ts  main.ts  preview.ts  split-pane.ts  styles.css  tabs.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: html-to-pdf.swift
src-tauri/src/: lib.rs  main.rs  menu.rs
