[package]
name = "markdowneditor"
version = "0.1.0"
edition = "2021"
description = "Lightweight Tauri v2 markdown editor with KaTeX math and live preview"
authors = ["Victor Keegan de la Pena"]
license = "UNLICENSED"

[lib]
name = "markdowneditor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
